soql/grammar.js
    source_file: ($) => seq(
      repeat($.header_comment),
      $._soql_query_expression
    ),

    /**
     * Header comments appear at the very start of a SOQL file.
     * They use the // syntax (single-line comments).
     *
     * Note: This is different from formatting_comment (///) which can appear
     * anywhere in the query and is treated as an "extra".
     */
    _soql_query_expression: ($) => $.soql_query_body,

    /**
     * A subquery is a query wrapped in parentheses, used in:
     *   - SELECT clauses: (SELECT Name FROM Contacts)
     *   - WHERE IN clauses: WHERE Id IN (SELECT AccountId FROM Contact)
     */
    subquery: ($) => seq("(", $.soql_query_body, ")"),

    /**
     * The main query body containing all clauses.
     *
     * Clause order follows the SOQL specification:
     *   SELECT → FROM → USING → WHERE → WITH → GROUP BY → ORDER BY →
     *   LIMIT → OFFSET → FOR → UPDATE → ALL ROWS
     *
     * Only SELECT and FROM are required. All other clauses are optional.
     *
     * @see https://developer.salesforce.com/docs/atlas.en-us.soql_sosl.meta/
     *      soql_sosl/sforce_api_calls_soql_select.htm
     */
    soql_query_body: ($) => seq(
      field("select_clause", $.select_clause),
      field("from_clause", $.from_clause),
      optional(field("using_clause", $.using_clause)),
      optional(field("where_clause", $.where_clause)),
      optional(field("with_clause", alias($.soql_with_clause, $.with_clause))),
      optional(field("group_by_clause", $.group_by_clause)),
      optional(field("order_by_clause", $.order_by_clause)),
      optional(field("limit_clause", $.limit_clause)),
      optional(field("offset_clause", $.offset_clause)),
      optional(field("for_clause", $.for_clause)),
      optional(field("update_clause", $.update_clause)),
      optional(field("all_rows_clause", $.all_rows_clause)),
    ),

    // =========================================================================
    // SELECT CLAUSE
    // =========================================================================

    /**
     * The SELECT clause specifies which fields to retrieve.
     *
     * Can contain:
     *   - Field names: SELECT Id, Name
     *   - Aggregate functions: SELECT COUNT(Id), SUM(Amount)
     *   - COUNT(): SELECT COUNT() (special case — no field argument)
     *   - Subqueries: SELECT (SELECT Name FROM Contacts)
     *   - TYPEOF: SELECT TYPEOF Owner WHEN User THEN ... END
     *   - FIELDS(): SELECT FIELDS(ALL)
     */
    select_clause: ($) => seq(
      ci("SELECT"),
      choice(
        // COUNT() is a special case — a standalone aggregate with no field
        $.count_expression,
        // Normal: comma-separated list of selectable expressions
        commaJoined1($._selectable_expression)
      )
    ),

    /**
     * COUNT() expression — the only aggregate that can stand alone
     * without any other fields in the SELECT clause.
     *
     * Example: SELECT COUNT() FROM Account
     */
    _selectable_expression: ($) => choice(
      $._value_expression,      // Field or function: Name, SUM(Amount)
      $.alias_expression,       // Function with alias: SUM(Amount) total
      $.type_of_clause,         // TYPEOF Owner WHEN User THEN ...
      $.fields_expression,      // FIELDS(ALL), FIELDS(CUSTOM), FIELDS(STANDARD)
      $.subquery                // (SELECT Name FROM Contacts)
    ),

    // =========================================================================
    // FROM CLAUSE
    // =========================================================================

    /**
     * The FROM clause specifies which sObject(s) to query.
     *
     * Examples:
     *   FROM Account
     *   FROM Contact c             (with alias)
     *   FROM Contact AS c          (with explicit AS alias)
     *   FROM Account, Contact      (comma-separated, rare)
     */
    from_clause: ($) => seq(
      ci("FROM"),
      commaJoined1(choice($.storage_identifier, $.storage_alias))
    ),

    /**
     * An sObject reference — simple or dotted identifier.
     * Simple: Account, Contact, My_Custom_Object__c
     * Dotted: (rare, used in certain SOQL contexts)
     */
    storage_identifier: ($) => choice($.identifier, $.dotted_identifier),

    /**
     * An sObject with an alias for use in the rest of the query.
     * The AS keyword is optional.
     *
     * Examples:
     *   FROM Contact c         (implicit alias)
     *   FROM Contact AS c      (explicit alias)
     */
    where_clause: ($) => seq(ci("WHERE"), $._boolean_expression),

    /**
     * A boolean expression — the building block of WHERE clauses.
     * Can be: AND, OR, NOT, or a single comparison.
     */
    _boolean_expression: ($) => choice(
      $.and_expression,
      $.or_expression,
      $.not_expression,
      $._condition_expression
    ),

    /**
     * AND expression — two or more conditions joined by AND.
     * Example: Name = 'Test' AND Industry = 'Tech' AND IsActive = TRUE
     */
    and_expression: ($) => seq(
      $._condition_expression,
      repeat1(seq(ci("AND"), $._condition_expression))
    ),

    /**
     * OR expression — two or more conditions joined by OR.
     * Example: Industry = 'Tech' OR Industry = 'Finance'
     */
    or_expression: ($) => seq(
      $._condition_expression,
      repeat1(seq(ci("OR"), $._condition_expression))
    ),

    /**
     * NOT expression — negates a condition.
     * Example: NOT Name = 'Test'
     */
    not_expression: ($) => seq(ci("NOT"), $._condition_expression),

    /**
     * A single condition — either a parenthesized boolean expression
     * or a comparison expression.
     */
    _condition_expression: ($) => choice(
      seq("(", $._boolean_expression, ")"),
      $.comparison_expression
    ),

    /**
     * A comparison — a value expression compared to another value.
     *
     * Examples:
     *   Name = 'Test'           (value comparison)
     *   Amount > 1000           (value comparison)
     *   Industry IN ('A', 'B') (set comparison)
     *   Id IN (SELECT ...)      (set comparison with subquery)
     */
    comparison_expression: ($) => seq(
      $._value_expression,
      $._comparison
    ),

    _comparison: ($) => choice($._value_comparison, $._set_comparison),

    /**
     * Value comparison: field OPERATOR value
     * Operators: =, !=, <>, <, <=, >, >=, LIKE
     */
    comparable_list: ($) => seq(
      "(",
      commaJoined1($._soql_literal),
      ")"
    ),

    // =========================================================================
    // WITH CLAUSE
    // =========================================================================

    /**
     * WITH clause — modifies query security or behavior.
     *
     * Examples:
     *   WITH SECURITY_ENFORCED    (enforce field-level security)
     *   WITH USER_MODE            (run query as current user)
     *   WITH SYSTEM_MODE          (run query with full permissions)
     *   WITH DATA CATEGORY Geography__c AT USA__c
     *   WITH RecordVisibilityContext(maxDescribeValueLength=100)
     */
    data_category_filter: ($) => seq(
      field("group", $.identifier),
      field("operator", choice(ci("AT"), ci("ABOVE"), ci("BELOW"), ci("ABOVE_OR_BELOW"))),
      field("category", choice($.identifier, seq("(", commaJoined1($.identifier), ")")))
    ),

    // =========================================================================
    // GROUP BY CLAUSE
    // =========================================================================

    /**
     * GROUP BY clause — group results for aggregate functions.
     * Supports standard grouping, ROLLUP, and CUBE.
     *
     * Examples:
     *   SELECT StageName, COUNT(Id) FROM Opportunity GROUP BY StageName
     *   SELECT StageName, LeadSource, COUNT(Id) FROM Opportunity GROUP BY ROLLUP(StageName, LeadSource)
     *   SELECT StageName, LeadSource, SUM(Amount) FROM Opportunity GROUP BY CUBE(StageName, LeadSource)
     */
    group_by_clause: ($) => seq(
      ci("GROUP"),
      ci("BY"),
      choice(
        commaJoined1($._group_by_field),
        seq(ci("ROLLUP"), "(", commaJoined1($._group_by_field), ")"),
        seq(ci("CUBE"), "(", commaJoined1($._group_by_field), ")"),
      ),
      optional($.having_clause)
    ),

    _group_by_field: ($) => choice(
      $.field_identifier,
      $.date_function,
      $.function_expression
    ),

    /**
     * HAVING clause — filter on aggregate results (like SQL HAVING).
     *
     * Example:
     *   GROUP BY StageName HAVING COUNT(Id) > 5
     */
    type_of_clause: ($) => seq(
      ci("TYPEOF"),
      choice($.identifier, $.dotted_identifier),
      repeat($.when_expression),
      optional($.else_expression),
      ci("END")
    ),

    when_expression: ($) => seq(
      ci("WHEN"), $.identifier, ci("THEN"), $.field_list
    ),

    else_expression: ($) => seq(ci("ELSE"), $.field_list),

    // =========================================================================
    // FIELDS() EXPRESSION
    // =========================================================================

    /**
     * FIELDS() function — select all/custom/standard fields.
     *
     * Examples:
     *   SELECT FIELDS(ALL) FROM Account LIMIT 200
     *   SELECT FIELDS(CUSTOM) FROM Account
     *   SELECT FIELDS(STANDARD) FROM Account
     *
     * Note: FIELDS(ALL) requires a LIMIT clause.
     */
    _value_expression: ($) => choice(
      $.date_function,
      $.scalar_function,
      $.convert_timezone_call,
      $.function_expression,
      $.formula_expression,
      $.field_identifier
    ),

    /**
     * SOQL Date Functions — extract date/time components.
     * Can appear in SELECT and GROUP BY clauses.
     *
     * Examples:
     *   CALENDAR_MONTH(CloseDate)
     *   FISCAL_YEAR(CloseDate)
     *   DAY_ONLY(CreatedDate)
     *   HOUR_IN_DAY(convertTimezone(CreatedDate))
     */
    date_function: ($) => seq(
      field("name", $.date_function_name),
      "(",
      field("argument", choice($.field_identifier, $.convert_timezone_call)),
      ")"
    ),

    date_function_name: ($) => choice(
      ci("CALENDAR_MONTH"),
      ci("CALENDAR_QUARTER"),
      ci("CALENDAR_YEAR"),
      ci("DAY_IN_MONTH"),
      ci("DAY_IN_WEEK"),
      ci("DAY_IN_YEAR"),
      ci("DAY_ONLY"),
      ci("FISCAL_MONTH"),
      ci("FISCAL_QUARTER"),
      ci("FISCAL_YEAR"),
      ci("HOUR_IN_DAY"),
      ci("WEEK_IN_MONTH"),
      ci("WEEK_IN_YEAR"),
    ),

    /**
     * SOQL Scalar Functions — format or convert values.
     *
     * Examples:
     *   FORMAT(Amount)
     *   convertCurrency(Amount)
     *   toLabel(StageName)
     *   GROUPING(StageName)
     */
    function_expression: ($) => seq(
      $._function_name,
      "(",
      commaJoined1($._value_expression),
      ")"
    ),

    /**
     * FORMULA() expression — evaluates dynamic formula expressions
     * in WHERE and HAVING clauses (Summer '26 SOQL feature).
     *
     * Examples:
     *   WHERE FORMULA('Birthdate + 365') > TODAY
     *   WHERE FORMULA('BillingState') = 'CA'
     */
    formula_expression: ($) => seq(
      ci("FORMULA"),
      "(",
      field("expression", choice($.string_literal, $._value_expression)),
      ")"
    ),

    /**
     * Alias expression — a value expression followed by an alias name.
     *
     * Example: SUM(Amount) total
     *          ^^^^^^^^^^^ ^^^^^ alias
     *          value expr
     */
    alias_expression: ($) => seq($._value_expression, $.identifier),

    // =========================================================================
    // IDENTIFIERS
    // =========================================================================

    /**
     * A dotted identifier — used for relationship field paths.
     *
     * Examples:
     *   Account.Name        (parent field)
     *   Owner.Profile.Name  (multi-level parent)
     *   parent1__r.Name     (custom relationship)
     */
    field_identifier: ($) => choice($.identifier, $.dotted_identifier),

    /**
     * A list of field names (used in TYPEOF WHEN...THEN clauses).
     */
    field_list: ($) => commaJoined1(choice($.identifier, $.dotted_identifier)),

    /**
     * Function name — used internally to mark the function name
     * with a field label for easy access in the syntax tree.
     */
    _function_name: ($) => field("function_name", $.identifier),

    // =========================================================================
    // OPERATORS
    // =========================================================================

    /**
     * Value comparison operators: =, !=, <>, <, <=, >, >=, LIKE
     *
     * Note: <> is an alternative to != (both mean "not equal").
     * LIKE supports % (multi-char wildcard) and _ (single-char wildcard).
     */
    value_comparison_operator: ($) => choice(
      "=", "!=", "<>", "<", "<=", ">", ">=", ci("LIKE")
    ),

    /**
     * Set comparison operators: IN, NOT IN, INCLUDES, EXCLUDES
     *
     * IN/NOT IN: Check if a value is in a set of values or subquery results
     * INCLUDES/EXCLUDES: Used with multi-select picklist fields
     */
    set_comparison_operator: ($) => choice(
      ci("IN"), ci("NOT IN"), ci("INCLUDES"), ci("EXCLUDES")
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================

    /**
     * All possible SOQL literal values — used in WHERE comparisons
     * and other value contexts.
     */
    _soql_literal: ($) => choice(
      $.int,
      $.decimal,
      $.string_literal,
      $.date,
      $.date_time,
      $.time_literal,
      $.boolean,
      $.date_literal,
      $.date_literal_with_param,
      $.currency_literal,
      $.null_literal,
      $.bind_variable
    ),

    /**
     * String literal — single-quoted string with escape sequences.
     *
     * Supported escape sequences:
     *   \n (newline), \r (carriage return), \t (tab), \b (backspace),
     *   \f (form feed), \' (single quote), \\ (backslash),
     *   \uXXXX (unicode), \" (double quote), \_ (underscore), \% (percent)
     *
     * The last two (\_ and \%) are SOQL-specific — they escape LIKE wildcards.
     */
    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,

    /** Integer literal */
    int: ($) => /\d+/,

    /** Decimal literal (optional negative, optional fractional part) */
    boolean: ($) => choice(ci("TRUE"), ci("FALSE")),

    /** NULL literal */
    null_literal: ($) => ci("NULL"),

    /**
     * Date literal — YYYY-MM-DD format.
     * Example: 2024-01-15
     */
    date: ($) => /[1-4][0-9]{3}-(?:0[1-9]|1[0-2])-(?:[0-2][1-9]|[1-2]0|3[0-1])/,

    /**
     * DateTime literal — ISO 8601 format.
     * Example: 2024-01-15T10:30:00Z
     * Example: 2024-01-15T10:30:00+05:00
     */
    date_time: ($) =>
      /[1-4][0-9]{3}-(?:0[1-9]|1[0-2])-(?:[0-2][1-9]|[1-2]0|3[0-1])T([0-1]\d|2[0-3]):[0-5]\d:[0-5]\d(?:\.\d\d?\d?)?(?:Z|[+-][0-1]\d:[0-5]\d)/,

    /**
     * Time literal — HH:mm:ss[.SSS][Z|+-HH:mm] format.
     * Example: 08:30:00.000Z
     * Example: 17:00:00
     */
    time_literal: ($) =>
      token(/[0-9]{2}:[0-9]{2}:[0-9]{2}(\.[0-9]{3})?([zZ]|[+-][0-9]{2}:[0-9]{2})?/),

    /**
     * Bind variable — :varName used in SOQL queries embedded in Apex or dynamic lookup.
     * Example: :boundVar
     */
    bind_variable: ($) => seq(":", $.identifier),

    /** Currency literal — 3-letter code + number (e.g., USD100.50) */
    date_literal: ($) => choice(
      ...SOQL_DATE_LITERALS.map((d) => ci(d))
    ),

    /**
     * Parameterized date literals — take a numeric argument after a colon.
     *
     * Format: KEYWORD:number
     * Example: LAST_N_DAYS:7 means "the last 7 days"
     * Example: NEXT_N_MONTHS:3 means "the next 3 months"
     */
    identifier: ($) => /[A-Za-z][A-Za-z\d_]*/,
  },
});
