soql/test/corpus/subqueries.txt
==================
Child subquery
==================

SELECT Name, (SELECT Name FROM Contacts) FROM Account

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (subquery
        (soql_query_body
          (select_clause
            (field_identifier (identifier)))
          (from_clause
            (storage_identifier (identifier))))))
    (from_clause
      (storage_identifier (identifier)))))

==================
TYPEOF expression
==================

SELECT TYPEOF Owner WHEN User THEN Username WHEN Group THEN Name END FROM Account

---

(source_file
  (soql_query_body
    (select_clause
      (type_of_clause
        (identifier)
        (when_expression (identifier) (field_list (identifier)))
        (when_expression (identifier) (field_list (identifier)))))
    (from_clause
      (storage_identifier (identifier)))))

==================
Aggregate with alias
==================

SELECT SUM(Amount) total FROM Opportunity

---

(source_file
  (soql_query_body
    (select_clause
      (alias_expression
        (function_expression
          (identifier)
          (field_identifier (identifier)))
        (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
WHERE with subquery
==================

SELECT Name FROM Account WHERE Id IN (SELECT AccountId FROM Contact)

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (set_comparison_operator)
        (subquery
          (soql_query_body
            (select_clause
              (field_identifier (identifier)))
            (from_clause
              (storage_identifier (identifier)))))))))
