soql/test/corpus/where-clauses.txt
==================
Simple WHERE with string comparison
==================

SELECT Name FROM Account WHERE Name = 'Test'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (string_literal)))))

==================
WHERE with AND
==================

SELECT Name FROM Account WHERE Name = 'Test' AND Industry = 'Tech'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (and_expression
        (comparison_expression
          (field_identifier (identifier))
          (value_comparison_operator)
          (string_literal))
        (comparison_expression
          (field_identifier (identifier))
          (value_comparison_operator)
          (string_literal))))))

==================
WHERE with OR
==================

SELECT Name FROM Account WHERE Industry = 'Tech' OR Industry = 'Finance'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (or_expression
        (comparison_expression
          (field_identifier (identifier))
          (value_comparison_operator)
          (string_literal))
        (comparison_expression
          (field_identifier (identifier))
          (value_comparison_operator)
          (string_literal))))))

==================
WHERE with NOT
==================

SELECT Name FROM Account WHERE NOT Name = 'Test'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (not_expression
        (comparison_expression
          (field_identifier (identifier))
          (value_comparison_operator)
          (string_literal))))))

==================
WHERE with IN list
==================

SELECT Name FROM Account WHERE Industry IN ('Tech', 'Finance', 'Health')

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (set_comparison_operator)
        (comparable_list
          (string_literal)
          (string_literal)
          (string_literal))))))

==================
WHERE with LIKE
==================

SELECT Name FROM Account WHERE Name LIKE '%robots%'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (string_literal)))))

==================
WHERE with boolean
==================

SELECT Name FROM Account WHERE IsActive = TRUE

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (boolean)))))

==================
WHERE with NULL
==================

SELECT Name FROM Account WHERE ParentId = NULL

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (null_literal)))))

==================
WHERE with FORMULA expression comparison to date literal
==================

SELECT Id FROM Contact WHERE FORMULA('Birthdate + 365') > TODAY

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (formula_expression
          (string_literal))
        (value_comparison_operator)
        (date_literal)))))

==================
WHERE with FORMULA expression comparison to string
==================

SELECT Id FROM Account WHERE FORMULA('BillingState') = 'CA'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (formula_expression
          (string_literal))
        (value_comparison_operator)
        (string_literal)))))

==================
WHERE with bind variable
==================

SELECT Id FROM Account WHERE Name = :accountName

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (bind_variable
          (identifier))))))

==================
WHERE with IN bind variable
==================

SELECT Id FROM Account WHERE Id IN :idList

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (set_comparison_operator)
        (bind_variable
          (identifier))))))


